--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,13 +2,15 @@
 body {
   width: 100vw;
   height: 100vh;
+  border: 2px solid #3366661a;
+  overflow: hidden;
 }
 #app {
   margin: 0 auto;
   font-weight: normal;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
 p {padding: 0}
 a,
